--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Commit Changes
       run: |
-        git config --global user.email "you@example.com"
-        git config --global user.name "Your Name"
+        git config --global user.email "jjp2196@columbia.edu"
+        git config --global user.name "James"
         git commit -am "Daily Commit"
         git push
