--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Run Python Script
       run: |
-        python main.py
+        python update.py
 
     - name: Commit Changes
       run: |
